# qemu-spike-pci

./: .gitignore  CMakeLists.txt  README.md  flake.nix
pcidev/: CMakeLists.txt  gpu.c  init.sh  spike.c
pcidev/patches/: kconfig.patch  meson.patch
runDevPCI/: go.mod  main.go
spike/: CMakeLists.txt
spike/include/: spike-bind.h
src/: CMakeLists.txt  main.c  spike-bind.cpp  spike-bind.h
testelf/: link.ld  my_program.elf  simple.c  spike_elf
testprog/: prog.c  startup.s
